# mysql_android

./: LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/cpp/: CMakeLists.txt  native-lib.cpp
app/src/androidTest/java/gr/app/JNITHESIS/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs/: package-lock.json  package.json  server.js
app/src/main/java/gr/app/JNITHESIS/: Consts.java  DoubleClickListener.java
app/src/main/java/gr/app/JNITHESIS/activities/: CreateDatabase.java  EditDatabases.java  (+3 more)
app/src/main/res/drawable/: add_circle.xml  bottom_border_line.xml  delete_round.xml  edit_table_fields_icon.xml  edit_text_red_view.xml  edit_text_view.xml  error_box.xml  left_arrow.xml  minus_circle.xml  primary_key.xml  ripple_table_row_blue.xml  ripple_table_row_white.xml
app/src/main/res/layout/: activity_create_database.xml  activity_edit_database.xml  activity_handle_database.xml  activity_handle_table.xml  activity_main.xml  adapter_database_layout.xml  adapter_database_layout_empty.xml  adapter_table_column_layout.xml  adapter_table_field_layout.xml  adapter_table_layout.xml  adapter_table_layout_empty.xml  create_table_sheet.xml  drop_database_sheet.xml  drop_table_sheet.xml  insert_new_data_into_table_sheet.xml  table_row_edit_sheet.xml  update_table_fields_sheet.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/gr/app/JNITHESIS/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
